[workspace]
members = ["bin", "crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["clabby"]

[workspace.dependencies]
# types
alloy-primitives = "0.4.2"

# ser
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"

# runtime
tokio = { version = "1.34.0", features = ["full"] }

# misc
anyhow = "1.0.75"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
overflow-checks = false

[profile.bench]
debug = true
