[workspace]
members = ["bin", "crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["clabby"]

[workspace.dependencies]
# types
alloy-primitives = "0.6.2"

# ser
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

# runtime
tokio = { version = "1.36.0", features = ["full"] }

# misc
anyhow = "1.0.79"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
overflow-checks = false

[profile.bench]
debug = true
