[package]
name = "cannon"
description = "An implementation of the OP Stack's native BE MIPS32 VM in Rust"
edition = "2021"

version.workspace = true
authors.workspace = true

[dependencies]
# External
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
alloy-primitives = "0.4.0"
tokio = { version = "1.32.0", features = ["macros"] }
flate2 = "1.0.27"
libc = "0.2.148"
tracing = { version = "0.1.37", optional = true }
command-fds = "0.2.2"

# Local
cannon-mipsevm = { path = "../mipsevm" }
preimage-oracle = { path = "../preimage" }

[dev-dependencies]
proptest = "1.2.0"

[features]
tracing = ["dep:tracing"]
