[package]
name = "cannon"
description = "An implementation of the OP Stack's native BE MIPS32 VM in Rust"
edition = "2021"

version.workspace = true
authors.workspace = true

[dependencies]
# workspace
alloy-primitives.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

# local
cannon-mipsevm = { path = "../mipsevm" }
preimage-oracle = { path = "../preimage" }

# misc
flate2 = "1.0.28"
command-fds = "0.2.3"
tracing = { version = "0.1.40", optional = true }

[dev-dependencies]
proptest = "1.2.0"

[features]
tracing = ["dep:tracing"]
