[package]
name = "cannon-mipsevm"
description = "An implementation of the MIPSEVM for Cannon"
edition = "2021"

version.workspace = true
authors.workspace = true

[dependencies]
preimage-oracle = { path = "../preimage" }
alloy-primitives = "0.3.3"
alloy-sol-types = "0.3.2"
once_cell = "1.18.0"
elf = "0.7.2"
revm = { version = "3.3.0", features = ["no_gas_measuring"] }
rustc-hash = "1.1.0"

# misc
anyhow = "1.0.75"
tracing = { version = "0.1.37", optional = true }

[dev-dependencies]
rand = "0.8.5"
criterion = { version = "0.5.1", features = ["html_reports"] }
pprof = { version = "0.12.1", features = ["criterion", "flamegraph", "frame-pointer"] } 

[features]
tracing = ["dep:tracing"]

[[bench]]
name = "memory"
harness = false

[[bench]]
name = "execution"
harness = false
