[package]
name = "cannon-mipsevm"
description = "An implementation of the MIPSEVM for Cannon"
edition = "2021"

version.workspace = true
authors.workspace = true

[dependencies]
# workspace
alloy-primitives.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

# local
preimage-oracle = { path = "../preimage" }

# types
alloy-sol-types = "0.4.2"

# misc
once_cell = "1.18.0"
elf = "0.7.3"
revm = { version = "3.5.0", features = ["no_gas_measuring"] }
tracing = { version = "0.1.40", optional = true }

# hashing
rustc-hash = "1.1.0"
xkcp-rs = { git = "https://github.com/DaniPopes/xkcp-rs", rev = "40447a5" }
keccak256-aarch64-simd = { git = "https://github.com/clabby/keccak256-aarch64", rev = "5c4c8f8", optional = true }

[dev-dependencies]
rand = "0.8.5"
criterion = { version = "0.5.1", features = ["html_reports"] }
pprof = { version = "0.13.0", features = ["criterion", "flamegraph", "frame-pointer"] } 
proptest = "1.2.0"

[features]
tracing = ["dep:tracing"]
simd-keccak = ["dep:keccak256-aarch64-simd"]

[[bench]]
name = "memory"
harness = false

[[bench]]
name = "execution"
harness = false
