[package]
name = "preimage-oracle"
description = "Bindings for interacting as a client or server over the Pre-image Oracle ABI"
edition = "2021"

version.workspace = true
authors.workspace = true

[dependencies]
alloy-primitives = "0.3.3"
once_cell = "1.18.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
tokio = { version = "1.32.0", features = ["full"] }

# misc
anyhow = "1.0.75"
tracing = "0.1.37"

[dev-dependencies]
rand = "0.8.5"

[features]
tracing = []
