[package]
name = "preimage-oracle"
description = "Bindings for interacting as a client or server over the Pre-image Oracle ABI"
edition = "2021"

version.workspace = true
authors.workspace = true

[dependencies]
alloy-primitives = "0.4.0"
tokio = { version = "1.32.0", features = ["full"] }
os_pipe = "1.1.4"

# misc
anyhow = "1.0.75"
tracing = { version = "0.1.37", optional = true }

[dev-dependencies]
rand = "0.8.5"

[features]
tracing = ["dep:tracing"]
