[package]
name = "preimage-oracle"
description = "Bindings for interacting as a client or server over the Pre-image Oracle ABI"
edition = "2021"

version.workspace = true
authors.workspace = true

[dependencies]
# workspace
alloy-primitives.workspace = true
anyhow.workspace = true
tokio.workspace = true

# misc
os_pipe = "1.1.4"
tracing = { version = "0.1.40", optional = true }

[dev-dependencies]
rand = "0.8.5"

[features]
tracing = ["dep:tracing"]
